--- a/relatorios/templates/relatorios/expedicao/criar.html
+++ b/relatorios/templates/relatorios/expedicao/criar.html
@@ -530,7 +530,7 @@
                     <i class="fas fa-times" style="margin-right: 0.5rem;"></i>
                     Cancelar
                 </a>
-                <button type="submit" class="btn btn-primary" onclick="console.log('Botão clicado!'); alert('Botão foi clicado!');">
+                <button type="submit" class="btn btn-primary">
                     <i class="fas fa-chart-line" style="margin-right: 0.5rem;"></i>
                     Gerar Relatório
                 </button>
